--- a/style.css
+++ b/style.css
@@ -12,9 +12,17 @@ body {
   font-family: monospace;
 }
 .mainBox {
-  width: 400px;
+  width: 360px;
   margin: auto;
 }
+@media screen and (max-width:481px) {
+.mainBox {
+  width: 360px;
+  margin: auto;
+}
+}
+
+
 h1 {
   font-size: 1.3em;
 }
