--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ select {
   color: var(--text);
   border: 1px solid var(--text);
 }
-input[type=text] {
+input[type=number] {
   width: 100%;
   box-sizing: border-box;
   color: var(--selected-value);
@@ -84,6 +84,12 @@ input[type=text] {
 }
 .slider {
   width: 100%;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 35px; /* Set a specific slider handle width */
+  height: 35px; /* Slider handle height */
 }
 :disabled {
   background-color: var(--background2);
