--- a/style.css
+++ b/style.css
@@ -78,6 +78,9 @@ input[type=text] {
   border: 0;
   border-bottom: 1px solid var(--text);
 }
+textarea[readonly] {
+  color: var(--selected-value);
+}
 input[type=number] {
   width: 100%;
   box-sizing: border-box;
@@ -102,7 +105,7 @@ input[type=number] {
 }
 :disabled {
   -webkit-text-fill-color: var(--selected-value);
-  color: var(--selected-value);
+  color: var(--selected-value) !important;
   background-color: var(--background2);
   border: none;
   border-bottom: none;
