--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ input[type=text] {
   color: var(--selected-value);
 }
 input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
   width: 100%;
   box-sizing: border-box;
   color: var(--selected-value);
@@ -94,6 +96,12 @@ input[type=number] {
   border: 0;
   border-bottom: 1px solid var(--text);
 }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .range_number {
   align: left;
   border-bottom: none;
