--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   --background2: #3d3846;
   --text: #c0bfbc;
   --detail-text: #77767b;
+  --alert-text: #f06a36;
   --selected-value: #e5a50a;
 }
 
@@ -25,9 +26,14 @@ body {
 
 h1 {
   font-size: 1.3em;
+  margin-top: 0em;
+  margin-bottom: 0em;
+  text-align: center;
 }
 h2 {
   font-size: 1.2em;
+  margin-top: 0em;
+  margin-bottom: 0em;
   text-align: center;
 }
 .selected_value {
@@ -37,6 +43,12 @@ h2 {
 .detail {
   size: .9em;
   color: var(--detail-text);
+  text-decoration: none;
+}
+.alert {
+  size: .9em;
+  color: var(--alert-text);
+  font-weight: bold;  
 }
 .section {
   background-color: var(--background2);
@@ -51,7 +63,7 @@ h2 {
 .label {
 }
 p {
-  text-align: center;
+  text-align: left;
 }
 
 .column {
@@ -120,5 +132,32 @@ input[type=number]::-webkit-outer-spin-button {
   background-color: var(--background2);
   border: none;
   border-bottom: none;
+}
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 320px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
 
